@startuml Home Screen Class Diagram

package Pages{
    package HomeScreen{
        class HomeScreenView{
            - _homeScreenVM : HomeScreenVM
            # init() : void
            # dispose() : void
            + showHeroNameInputPopUp(int index) : Future<void>
            + showInputPopUp() : Future<void>
        }

        class HomeScreenVM
        {
            + fetchAllAvengers() : Future<void>
            + showInputPopUp(int index) : void
            + createAvenger(String nameOfAvenger) : Future<void>
            + navigateToPreviousView() : void
            + editAvenger(int index, String names) : Future<void>
            + deleteAvenger(int index) : void
            + inputPopUp() : void
        }

        class HomeScreenModel{
            + allAvengers : List<AvengerBO>
            + isAvengersLoading : bool
        }
    }

}

package Services{
    package AvengerServices{
        abstract class IAvengerService{
            + getAllAvengers(): Future<ServiceResult<List<AvengerBO>>>
            + createAvenger (AvengerBO newHero): Future<ServiceResult<List<AvengerBO>>>
            + editAvenger (AvengerBO editAvenger): Future<ServiceResult<List<AvengerBO>>>
            + deleteAvenger (AvengerBO deleteAvenger): Future<ServiceResult<List<AvengerBO>>>

        }
    }
}

HomeScreenView --> HomeScreenVM : uses
HomeScreenVM --> HomeScreenModel : extends
HomeScreenModel --> AvengerBO : uses
HomeScreenVM --> IAvengerService : uses
@enduml